--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,10 @@
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:shadowColor="@color/black"
-        android:shadowRadius="6"
         android:text="@string/splash_text"
-        android:textColor="#F8BB03"
+        android:textColor="@color/black"
         android:textSize="28sp"
+        android:shadowRadius="2"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
