--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FavoriteFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/memeRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Favorite Fragment" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
